terraform/infra-db/subnets.tf
resource "aws_subnet" "public" {
  count = var.availability_zone_count

  vpc_id                  = aws_vpc.main.id
  cidr_block              = local.public_subnet_cidrs[count.index]
  availability_zone       = local.selected_availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = merge(local.common_tags, {
    Name                            = "${var.project_name}-public-${count.index + 1}"
    Component                       = "network"
    Type                            = "public"
    "kubernetes.io/role/elb"        = "1"
    "kubernetes.io/cluster/oficina" = "shared"
  })
}

resource "aws_subnet" "private" {
  count = var.availability_zone_count

  vpc_id                  = aws_vpc.main.id
  cidr_block              = local.private_subnet_cidrs[count.index]
  availability_zone       = local.selected_availability_zones[count.index]
  map_public_ip_on_launch = false

  tags = merge(local.common_tags, {
    Name                              = "${var.project_name}-private-${count.index + 1}"
    Component                         = "network"
    Type                              = "private"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/oficina"   = "shared"
  })
}
